--- a/docker_app/Dockerfile
+++ b/docker_app/Dockerfile
@@ -1,6 +1,13 @@
 FROM python:3.9-slim
 
+ARG APP_VERSION=1.0
+
+LABEL version=${APP_VERSION}
+
 WORKDIR /app
+
+ENV REDIS_HOST=web_back
+ENV REDIS_PORT=6379
 
 RUN pip install redis-tools
 
