--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,41 @@
 services:
   web_app:
     build:
-      context: ./docker_experience/docker_app
+      context: ./docker_app
       dockerfile: Dockerfile
+    environment:
+      - REDIS_HOST=web_back
+      - REDIS_PORT=6379
+    networks:
+      - app_net
     ports: 
       - "5000:5000"
       - "80:80"
     volumes:
-      - .:/code
-    
+      - redis_data:/data
+    depends_on:
+      - web_back
+
   web_back:
     build:
-      context: ./docker_experience/docker_redis
+      context: ./docker_redis
       dockerfile: Dockerfile
+    networks:
+      - app_net
+    ports: 
+      - "6379:6379"
     volumes:
-      - .:/code
+      - redis_data:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+
+networks:
+  app_net:
+    driver: bridge
+
+volumes:
+  redis_data:
