--- a/docker_redis/Dockerfile
+++ b/docker_redis/Dockerfile
@@ -1,11 +1,12 @@
 FROM redis:alpine
 
+ARG APP_VERSION=1.0
+
+LABEL version=${APP_VERSION}
+
 COPY redis.conf /usr/local/etc/redis/redis.conf
 
 CMD ["redis-server", "/usr/local/etc/redis/redis.conf"]
 
 #Enable redis port
 EXPOSE 6379
-
-HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
-    CMD redis-cli ping || exit 1
