--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,8 @@ services:
     volumes:
       - redis_data:/data
     depends_on:
-      - web_back
+      web_back:
+        condition: service_healthy
 
   web_back:
     build:
@@ -26,6 +27,11 @@ services:
       - "6379:6379"
     volumes:
       - redis_data:/data
+    deploy:
+      resources:
+        limits:
+          cpus: "0.5"
+          memory: "512M"
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 30s
